# alpaca-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/alpaca_mcp/: __init__.py  server.py  tools.py
